{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 441,
  "lineage": "9d76f85a-c301-297b-5985-e82abecd4733",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "apci_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:loadbalancer/app/apci-alb/7a4df44bf13cc961",
            "arn_suffix": "app/apci-alb/7a4df44bf13cc961",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apci-alb-177141548.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:loadbalancer/app/apci-alb/7a4df44bf13cc961",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apci-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-036a23c754ca25ccb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f4a179062c9b084"
              },
              {
                "subnet_id": "subnet-030a24a6f3739cd7c"
              }
            ],
            "subnets": [
              "subnet-02f4a179062c9b084",
              "subnet-030a24a6f3739cd7c"
            ],
            "tags": {
              "Name": "apci-Jupiter-dev-alb",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-alb",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:listener/app/apci-alb/7a4df44bf13cc961/8bae33f4d282b99e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:listener/app/apci-alb/7a4df44bf13cc961/8bae33f4d282b99e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:loadbalancer/app/apci-alb/7a4df44bf13cc961",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.apci_alb",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:listener/app/apci-alb/7a4df44bf13cc961/b3b5e79e5d19c0de",
            "certificate_arn": "arn:aws:acm:eu-north-1:640168428687:certificate/9293eac7-b31c-4f9a-b7f3-f49e40f797dc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:targetgroup/apci-tg/721997b673b584cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:listener/app/apci-alb/7a4df44bf13cc961/b3b5e79e5d19c0de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:loadbalancer/app/apci-alb/7a4df44bf13cc961",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.apci_alb",
            "module.alb.aws_lb_target_group.apci_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apci_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:targetgroup/apci-tg/721997b673b584cc",
            "arn_suffix": "targetgroup/apci-tg/721997b673b584cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:640168428687:targetgroup/apci-tg/721997b673b584cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:640168428687:loadbalancer/app/apci-alb/7a4df44bf13cc961"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apci-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group/sg-036a23c754ca25ccb",
            "description": "Allow  HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036a23c754ca25ccb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apci_alb_sg",
            "name_prefix": "",
            "owner_id": "640168428687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http and https"
            },
            "tags_all": {
              "Name": "allow_http and https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group-rule/sgr-040885c0f7c3ad91b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-040885c0f7c3ad91b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036a23c754ca25ccb",
            "security_group_rule_id": "sgr-040885c0f7c3ad91b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group-rule/sgr-05b050ffbea1b0fd2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05b050ffbea1b0fd2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036a23c754ca25ccb",
            "security_group_rule_id": "sgr-05b050ffbea1b0fd2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group-rule/sgr-008bddf5ea791fcfe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-008bddf5ea791fcfe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036a23c754ca25ccb",
            "security_group_rule_id": "sgr-008bddf5ea791fcfe",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jupiter_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group/sg-0b13f04f7057fbb02",
            "description": "Allow SSH, HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b13f04f7057fbb02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jupiter_server_sg",
            "name_prefix": "",
            "owner_id": "640168428687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group-rule/sgr-0b13d36ec146b4c7c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b13d36ec146b4c7c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b13f04f7057fbb02",
            "security_group_rule_id": "sgr-0b13d36ec146b4c7c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.jupiter_server_sg",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:security-group-rule/sgr-0cc9dd4f8957e7914",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cc9dd4f8957e7914",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b13f04f7057fbb02",
            "security_group_rule_id": "sgr-0cc9dd4f8957e7914",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.jupiter_server_sg",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10fb8c20c82b2cd",
            "arn": "arn:aws:ec2:eu-north-1:640168428687:elastic-ip/eipalloc-0a10fb8c20c82b2cd",
            "association_id": "eipassoc-0f59e8c4b31ee4dd5",
            "domain": "vpc",
            "id": "eipalloc-0a10fb8c20c82b2cd",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-08db3d3aa57b6e461",
            "private_dns": "ip-10-0-0-129.eu-north-1.compute.internal",
            "private_ip": "10.0.0.129",
            "public_dns": "ec2-16-16-168-75.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.168.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apci-Jupiter-dev-eip_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-eip_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0430a14757c3a256e",
            "arn": "arn:aws:ec2:eu-north-1:640168428687:elastic-ip/eipalloc-0430a14757c3a256e",
            "association_id": "eipassoc-015898eae2d519717",
            "domain": "vpc",
            "id": "eipalloc-0430a14757c3a256e",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-034989b52aa133975",
            "private_dns": "ip-10-0-1-220.eu-north-1.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-13-60-119-183.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.119.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apci-Jupiter-dev-eip_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-eip_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:internet-gateway/igw-0bc0fdb997eaf98eb",
            "id": "igw-0bc0fdb997eaf98eb",
            "owner_id": "640168428687",
            "tags": {
              "Name": "apci-Jupiter-dev-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10fb8c20c82b2cd",
            "association_id": "eipassoc-0f59e8c4b31ee4dd5",
            "connectivity_type": "public",
            "id": "nat-0b22e6e0af711961e",
            "network_interface_id": "eni-08db3d3aa57b6e461",
            "private_ip": "10.0.0.129",
            "public_ip": "16.16.168.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030a24a6f3739cd7c",
            "tags": {
              "Name": "apci-Jupiter-dev-nat_gw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-nat_gw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0430a14757c3a256e",
            "association_id": "eipassoc-015898eae2d519717",
            "connectivity_type": "public",
            "id": "nat-0da5cae41cd4bb8f7",
            "network_interface_id": "eni-034989b52aa133975",
            "private_ip": "10.0.1.220",
            "public_ip": "13.60.119.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f4a179062c9b084",
            "tags": {
              "Name": "apci-Jupiter-dev-nat_gw_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-nat_gw_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_eip.eip_az1b",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_private_rt_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:route-table/rtb-070dd480388cb9056",
            "id": "rtb-070dd480388cb9056",
            "owner_id": "640168428687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b22e6e0af711961e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apci-Jupiter-dev-private_rt_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-private_rt_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_private_rt_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:route-table/rtb-0efdf69a4e4fc2eab",
            "id": "rtb-0efdf69a4e4fc2eab",
            "owner_id": "640168428687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da5cae41cd4bb8f7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apci-Jupiter-dev-private_rt_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-private_rt_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_eip.eip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:route-table/rtb-06fc84bbc79c76237",
            "id": "rtb-06fc84bbc79c76237",
            "owner_id": "640168428687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc0fdb997eaf98eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apci-Jupiter-dev-public_rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-public_rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b03d7ed57e09ffe",
            "route_table_id": "rtb-070dd480388cb9056",
            "subnet_id": "subnet-0c0b6c4cc3f7a43ad"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_route_table.apci_private_rt_az1a",
            "module.vpc.aws_subnet.backend_subnet_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08858393e1019363c",
            "route_table_id": "rtb-0efdf69a4e4fc2eab",
            "subnet_id": "subnet-0f31d4d42c6033a2d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_eip.eip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_route_table.apci_private_rt_az1b",
            "module.vpc.aws_subnet.backend_subnet_az1b",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d40c805d49f81b",
            "route_table_id": "rtb-070dd480388cb9056",
            "subnet_id": "subnet-07d6713cd713941a2"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_route_table.apci_private_rt_az1a",
            "module.vpc.aws_subnet.db_subnet_az1a",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df9e7b3c375ed175",
            "route_table_id": "rtb-0efdf69a4e4fc2eab",
            "subnet_id": "subnet-0a0741397b91d7452"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az1a",
            "module.vpc.aws_eip.eip_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_route_table.apci_private_rt_az1b",
            "module.vpc.aws_subnet.db_subnet_az1b",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758c6a946e69fa05",
            "route_table_id": "rtb-06fc84bbc79c76237",
            "subnet_id": "subnet-030a24a6f3739cd7c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.frontend_subnet_az1a",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f262cb2f3fc19d83",
            "route_table_id": "rtb-06fc84bbc79c76237",
            "subnet_id": "subnet-02f4a179062c9b084"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_public_rt",
            "module.vpc.aws_subnet.frontend_subnet_az1b",
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-0c0b6c4cc3f7a43ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0b6c4cc3f7a43ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-backend_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-backend_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-0f31d4d42c6033a2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31d4d42c6033a2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-backend_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-backend_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-07d6713cd713941a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d6713cd713941a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-db_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-db_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-0a0741397b91d7452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0741397b91d7452",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-db_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-db_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-030a24a6f3739cd7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a24a6f3739cd7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-frontend_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-frontend_subnet_az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:subnet/subnet-02f4a179062c9b084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f4a179062c9b084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168428687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apci-Jupiter-dev-frontend_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-frontend_subnet_az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "vpc_id": "vpc-0d5a5a3c69429fb90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.apci_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "apci_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:640168428687:vpc/vpc-0d5a5a3c69429fb90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d12789334e993bc0",
            "default_route_table_id": "rtb-0364aa574ea4c0b79",
            "default_security_group_id": "sg-0fc08c064a95a85ef",
            "dhcp_options_id": "dopt-060f93cea4895f76a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5a5a3c69429fb90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0364aa574ea4c0b79",
            "owner_id": "640168428687",
            "tags": {
              "Name": "apci-Jupiter-dev-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            },
            "tags_all": {
              "Name": "apci-Jupiter-dev-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2024-10-05T21:15:40Z",
              "environment": "dev",
              "project": "apci"
            }
          }
        }
      ]
    }
  ]
}